--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web devoloper </title>
 </head>
-<h5> I am five</h5>
+<header>
+    <nav>
+        <h3>Mary</h3>       
+        <ul>
+            <li><a href=""> Portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li ><a href=""><button>Hire me</button></a></li>
+
+        </ul>
+    </nav>
+</header>
 <body>
     
 </body>
